# c-ids.github.io

./: README.md  index.html
C-IDS/: CMakeLists.txt  README.md
C-IDS/Core/: CMakeLists.txt
C-IDS/Core/include/cids/: abi.h
C-IDS/Core/src/: abi_shim.cpp  detection_event.hpp  engine.cpp  engine.hpp  packet_parser.cpp  packet_parser.hpp  plugin_dispatcher.cpp  plugin_dispatcher.hpp  rule_matcher.cpp  rule_matcher.hpp  signature_registry.cpp  signature_registry.hpp
C-IDS/Core/tests/: CMakeLists.txt  test_abi_boundary.cpp  test_engine.cpp
C-IDS/Desktop/CIDS.Desktop/: CIDS.Desktop.csproj
C-IDS/Desktop/Interop/: CidsEngineClient.cs  NativeMethods.cs
C-IDS/Mobile/: Package.swift
C-IDS/Mobile/Sources/CIDSCBridge/include/: cids_abi.h  cids_packet_abi.h  module.modulemap
C-IDS/Mobile/Sources/CIDSMobile/: CIDSEngine.swift
C-IDS/Mobile/Tests/CIDSMobileTests/: CIDSEngineTests.swift
C-IDS/Plugins/PythonHost/: CMakeLists.txt
C-IDS/Plugins/PythonHost/include/: python_plugin_sink.hpp
C-IDS/Plugins/PythonHost/src/: python_plugin_sink.cpp  script_sandbox.cpp
C-IDS/Plugins/examples/: auto_block_high_severity.py
C-IDS/cmake/: CidsCompilerHardening.cmake
C-IDS/docs/: ABI_CONTRACT.md  ARCHITECTURE.md  PLUGIN_GUIDE.md  SECURITY_POLICY.md
